fix(wishes): fix index align in the wish list

--- a/src/app/gw-app/wishes/wish-card/wish-card.component.scss
+++ b/src/app/gw-app/wishes/wish-card/wish-card.component.scss
@@ -11,6 +11,7 @@
 
 .list-index {
   width: 31.5px;
+  min-width: 31.5px;
   text-align: center;
 }
 
